--- a/BootStrap/bootstrap.html
+++ b/BootStrap/bootstrap.html
@@ -809,7 +809,6 @@
   </div>
 </div><br>
 
-
 <h4>自定义内容--container</h4>
 <style>
   img{
@@ -1089,6 +1088,7 @@
 <div style="height:200px"></div><br>
 
 <h4>点击空白不会收起--data-backdrop="static"</h4>
+<p>data-backdrop="static"时，点击空白不会导致模态窗口关闭，data-backdrop="true"（默认）时，点击空白会导致模态窗口关闭</p>
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal2">提问（点击弹出模态窗口）</button>
 <div class="modal fade" id="myModal2" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="myModelLabel">
   <div class="modal-dialog">
@@ -1111,6 +1111,7 @@
 </div>
 <div style="height:200px"></div><br>
 
+<h4>使用JS控制模态窗口--modal</h4>
 <script>
   $(function(){
     $("#open").click(function(){
@@ -1151,6 +1152,7 @@
 <div style="height:200px"></div><br>
 
 <h4>监听模态的变化</h4>
+<p>button标签在里面加一个type=“button”是为了不使用提交功能</p>
 <script>
   $(function(){
     $("#myModal4").on("show.bs.modal",function(){
@@ -1170,4 +1172,240 @@
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal4">提问（点击弹出模态窗口）</button>
 <div class="modal fade" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModelLabel">
   <div class="modal-dialog">
-    <div class="modal-">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button data-dismiss="modal" class="close" type="button">
+          <span aria-hidden="true">X</span><span class="sr-only">Close</span>
+        </button>
+        <h4 class="modal-title">提问</h4>
+      </div>
+      <div class="modal-body">
+        <p>问题描述</p><textarea class="form-control"></textarea>
+      </div>
+      <div class="modal-footer">
+        <button data-dismiss="modal" class="btn btn-default" type="button">关闭</button>
+        <button class="btn btn-primary" type="button">提交</button>
+      </div>
+    </div>
+  </div>
+</div>
+<div style="height:200px"></div><br><br>
+
+<h4>可切换导航栏--tab-pan--in active</h4>
+<style>
+  p{
+    margin-left:10px;
+    margin-top:10px;
+  }
+</style>
+<ul id="myTab" class="nav nav-tabs">
+  <li class="active"><a href="#dota" data-toggle="tab">Dota</a> </li>
+  <li><a href="#lol" data-toggle="tab">LOL</a></li>
+  <li class="dropdown">
+    <a href="#" id="myTabDrop1" class="dropdown-toggle" data-toggle="dropdown">其他<b class="caret"></b></a>
+    <ul class="dropdown-menu" role="menu" aria-labelledby="myTabDrop1">
+      <li><a href="#storm" tabindex="-1" data-toggle="tab">风暴英雄</a></li>
+      <li><a href="#h300" tabindex="-1" data-toggle="tab">300英雄</a></li>
+    </ul>
+  </li>
+</ul>
+<div id="myTabContent" class="tab-content">
+  <div class="tab-pane fade in active" id="dota">
+    <p>《Dota》（Defense Of The Ancients）,守护古树、守护遗迹、远古遗迹守卫，由暴雪公司出品即时战略游戏《魔兽争霸3》的一款多人即时对战、自定义地图，可支持10个人同时连线游戏，暴雪公司官方认可的魔兽争霸 RPG 地图。</p>
+  </div>
+  <div class="tab-pane fade" id="lol">
+    <p>《英雄联盟》（LOL）由美国 Riot Games 开发，中国大陆地区由腾讯运营的网络游戏。</p>
+  </div>
+  <div class="tab-pane fade" id="storm">
+    <p>《风暴英雄》由暴雪娱乐公司开发的一款运行在 Windows 和 Mac OS 上的在线多人竞技 PC 游戏。</p>
+    <p>游戏中的角色主要来自于暴雪三大经典游戏系列：《魔兽世界》、《暗黑破坏神》和《星际争霸》。是一款道具收费的游戏，与《星际争霸Ⅱ》基于同一引擎开发。</p>
+  </div>
+  <div class="tab-pane fade" id="h300">
+    <p>《300英雄》由上海跳跃网络科技有限公司自主研发，深圳中青宝互动网络股份有限公司运营的一款类 DOTA 网游。游戏以7V7组队对抗玩法为主，提供永恒战场和永恒竞技场两种经典模式任由玩家选择，并创新性的加入了勇者斗恶龙、克隆战争等多种娱乐休闲玩法。</p>
+  </div>
+</div>
+<div style="height:200px"></div><br><br>
+
+<h4>非 Bootstrap 工具提示--title</h4>
+<button class="btn btn-default" title="提示信息">非 BootStrap 工具提示</button><br>
+
+<h4>左侧提示--data-placement</h4>
+<button style="margin-left:100px" type="button" class="btn btn-default" data-toggle="tooltip" data-placement="left" title="左侧提示信息">鼠标悬停显示提示信息</button>
+<script>
+  $(function(){
+    $("[data-toggle='tooltip']").tooltip();
+  });
+</script><br>
+
+<h4>右侧提示--data-placement</h4>
+<button style="margin-right:100px" type="button" class="btn btn-default" data-toggle="tooltip" data-placement="right" title="右侧提示信息">鼠标悬停显示提示信息</button>
+<script>
+  $(function(){
+    $("[data-toggle='tooltip']").tooltip();
+  });
+</script><br>
+
+<h4>上方提示--data-placement</h4>
+<button style="margin-top:50px" type="button" class="btn btn-default" data-toggle="tooltip" data-placement="top" title="上方提示信息">鼠标悬停提示信息</button>
+<script>
+  $(function(){
+    $("[data-toggle='tooltip']").tooltip();
+  });
+</script><br>
+
+<h4>下方提示--data-placement</h4>
+<button style="margin-buttom:50px" type="button" class="btn btn-default" data-toggle="tooltip" data-placement="bottom" title="下方提示信息">鼠标悬停提示信息</button>
+<script>
+  $(function(){
+    $("[data-toggle='tooltip']").tooltip();
+  });
+</script><br><br>
+
+<h4>基本折叠--well--无法正常展示，well.html可查看效果</h4>
+<style>
+  div.well{
+    margin:10px;
+  }
+</style>
+<a class="btn btn-info" role="button" data-toggle="collapse" href="#dota" aria-expanded="false" aria-controls="collapseExample">Dota</a>
+<button class="btn btn-info" type="button" data-toggle="collapse" data-target="#lol" aria-expanded="false" aria-controls="collapseExample">LOL</button>
+<div class="collapse" id="dota">
+  <div class="well">
+    《Dota》（Defense Of The Ancients），守护古树、守护遗迹、远古遗迹守卫，暴雪公司出品的即时战略游戏。
+  </div>
+</div>
+<div class="collapse" id="lol">
+  <div class="well">
+    《英雄联盟》（LOL）。
+  </div>
+</div>
+<div style="height:100px"></div><br>
+
+<h4>面板折叠--panel</h4>
+<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+  <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingOne">
+      <h4 class="panel-title">
+        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Dota</a>
+      </h4>
+    </div>
+    <div id="collapseOne" class="panel-collapse in" role="tabpanel" aria-labelledby="headingOne">
+      <div class="panel-body">
+        《DotA》（Defense of the Ancients），可以译作守护古树、守护遗迹、远古遗迹守卫， 是由暴雪公司出品即时战略游戏《魔兽争霸3》的一款多人即时对战、自定义地图，可支持10个人同时连线游戏，是暴雪公司官方认可的魔兽争霸的RPG地图。
+      </div>
+    </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingTwo">
+      <h4 class="panel-title">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordin" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">LOL</a>
+      </h4>
+    </div>
+    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+      <div class="panel-body">
+        《英雄联盟》（简称lol）是由美国Riot Games开发，中国大陆地区由腾讯游戏运营的网络游戏。
+      </div>
+    </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingThree">
+      <h4 class="panel-title">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">风暴英雄</a>
+      </h4>
+    </div>
+    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+      <div class="panel-body">
+        《风暴英雄》 是由暴雪娱乐公司开发的一款运行在Windows和Mac OS上的在线多人竞技PC游戏。
+      </div>
+    </div>
+  </div>
+</div><br><br>
+
+<h4>基本轮播--carousel slide</h4>
+<style>
+  div.item img{
+    width:100%;
+  }
+  div#carousel-example-generic{
+    width:80%;
+    margin:0 auto;
+  }
+</style>
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+  </ol>
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="pictures/car.jpg">
+    </div>
+    <div class="item">
+      <img src="pictures/cat.jpg">
+    </div>
+    <div class="item">
+      <img src="pictures/doraemon.jpg">
+    </div>
+    <div class="item">
+      <img src="pictures/waterfall.jpg">
+    </div>
+  </div>
+</div><br>
+
+<h4>带标题的轮播--carousel slide--carousel-inner</h4>
+<style>
+  div.item img{
+    width:100%;
+  }
+  div#carousel-example-generic{
+    width:80%;
+    margin:0 auto;
+  }
+</style>
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+  </ol>
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="pictures/car.jpg">
+      <div class="carousel-caption">car</div>
+    </div>
+    <div class="item">
+      <img src="pictures/cat.jpg">
+      <div class="carousel-caption">cat</div>
+    </div>
+    <div class="item">
+      <img src="pictures/doraemon.jpg">
+      <div class="carousel-caption">doraemon</div>
+    </div>
+    <div class="item">
+      <img src="pictures/waterfall.jpg">
+      <div class="carousel-caption">waterfall</div>
+    </div>
+  </div>
+</div><br>
+
+<h4>设置轮播速度--data-interval</h4>
+<style>
+  div.item img{
+    width:100%;
+  }
+  div#carousel-example-generic{
+    width:80%;
+    margin:0 auto;
+  }
+</style>
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="500">
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    <li data-tar>
+
+<br><br>
