--- a/BootStrap/bootstrap.html
+++ b/BootStrap/bootstrap.html
@@ -1401,11 +1401,48 @@
     margin:0 auto;
   }
 </style>
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="500">
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="5000">
   <ol class="carousel-indicators">
     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
     <li data-target="#carousel-example-generic" data-slide-to="1"></li>
     <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-    <li data-tar>
+    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+  </ol>
+  <div class="carousel-inner" role="listbox">
+    <div class="item active"><img src="pictures/car.jpg"></div>
+    <div class="item"><img src="pictures/cat.jpg"></div>
+    <div class="item"><img src="pictures/doraemon.jpg"></div>
+    <div class="item"><img src="pictures/waterfall.jpg"></div>
+  </div>
+</div><br>
 
-<br><br>
+<h4>控制前后的轮播--无法正常展示，well.html可查看效果</h4>
+<style>
+  div.item img{
+    width:100%;
+  }
+  div#carousel-example-generic{
+    width:80%;
+    margin:0 auto;
+  }
+</style>
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+  </ol>
+  <div class="carousel-inner" role="listbox">
+    <div class="item active"><img src="pictures/car.jpg"></div>
+    <div class="item"><img src="pictures/cat.jpg"></div>
+    <div class="item"><img src="pictures/doraemon.jpg"></div>
+    <div class="item"><img src="pictures/waterfall.jpg"></div>
+  </div>
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+  </a>
+</div><br><br>
